--- a/v8/android-arm/args.gn
+++ b/v8/android-arm/args.gn
@@ -9,3 +9,5 @@ v8_use_external_startup_data = false
 v8_enable_i18n_support= false
 symbol_level = 0
 v8_android_log_stdout = true
+v8_enable_pointer_compression = false
+
