--- a/v8/linux-x64/args.gn
+++ b/v8/linux-x64/args.gn
@@ -7,3 +7,5 @@ v8_monolithic = true
 v8_use_external_startup_data = false
 symbol_level = 0
 v8_enable_i18n_support= false
+v8_enable_pointer_compression = false
+
