--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -13,7 +13,7 @@ jobs:
 
     - name: Download monolithic libraries and extract to v8.out
       run: |
-        curl -k -O http://download.eclipsesource.com/j2v8/v8/libv8_10.3.174.14_monolith.zip
+        curl -O https://download.eclipsesource.com/j2v8/v8/libv8_10.3.174.14_monolith.zip
         mkdir -p v8.out
         unzip libv8_10.3.174.14_monolith.zip -d v8.out
 
